# stm32g4-hal

./: LICENSE-MIT  README.md
hal/: Cargo.toml  README.md  build.rs  expand.rs
hal/.cargo/: config.toml
hal/examples/: adc.rs  adc_conversion.rs  blinky.rs  clock.rs  delay.rs  gpio.rs  gpio_array.rs  pwm.rs  pwm_advenced.rs  pwm_input.rs  rng.rs  rtic_systick.rs  rtic_tick.rs  timer.rs  watchdog.rs
hal/src/: adc.rs  bb.rs  can.rs  dac.rs  delay.rs  dma.rs  exti.rs  gpio.rs  i2c.rs  lib.rs  nb.rs  opamp.rs  panic.rs  prelude.rs  pwm.rs  pwm_input.rs  pwr.rs  qei.rs  rcc.rs  rng.rs  rtc.rs  rtic.rs  serial.rs  spi.rs  syscfg.rs  timer.rs  watchdog.rs
hal/src/adc/: config.rs  pins.rs
hal/src/gpio/: convert.rs  erased.rs  exti.rs  marker.rs  outport.rs  partially_erased.rs
hal/src/mcu/stm32/: gpio.rs
hal/src/pwm/: pins.rs
hal/src/rcc/: clock.rs  clockout.rs  config.rs  enable.rs  lsco.rs  mco.rs  rtc.rs
hal/src/rtic/: systick.rs  timer.rs  timer2.rs
hal/src/serial/: config.rs
hal/src/timer/: counter.rs  delay.rs  ehal.rs  sealed.rs
pac/: Cargo.toml  README.md  build.rs
pac/devices/: STM32G431.yaml
pac/devices/common/: ADC1.yaml  ADC12_COM.yaml  AES.yaml  COMP.yaml  CORDIC.yaml  CRC.yaml  CRS.yaml  DAC1.yaml  DBGMCU.yaml  DMA1.yaml  DMAMUX.yaml  EXTI.yaml  FDCAN1.yaml  FLASH.yaml  FMAC.yaml  GPIOA.yaml  GPIOB.yaml  GPIOC.yaml  I2C1.yaml  IWDG.yaml  LPTIM1.yaml  LPUART1.yaml  OPAMP.yaml  PWR.yaml  RCC.yaml  RNG.yaml  RTC.yaml  SAI.yaml  SPI1.yaml  SYSCFG.yaml  TAMP.yaml  TIM1.yaml  TIM15.yaml  TIM16.yaml  TIM2.yaml  TIM3.yaml  TIM6.yaml  UART4.yaml  UCPD1.yaml  USART1.yaml  (+3 more)
pac/devices/svds/: STM32G431.svd
pac/src/: generic.rs  lib.rs
pac/src/stm32g431/: _vectors.rs  adc1.rs  adc12_common.rs  aes.rs  comp.rs  cordic.rs  crc.rs  crs.rs  dac1.rs  dbgmcu.rs  device.x  dma1.rs  dmamux.rs  exti.rs  fdcan1.rs  flash.rs  fmac.rs  generic.rs  gpiob.rs  gpioc.rs  i2c1.rs  iwdg.rs  lptimer1.rs  lpuart1.rs  mod.rs  opamp.rs  pwr.rs  rcc.rs  rng.rs  rtc.rs  sai.rs  spi1.rs  syscfg.rs  tamp.rs  tim1.rs  tim15.rs  tim16.rs  tim2.rs  tim3.rs  tim6.rs  (+6 more)
pac/src/stm32g431/adc1/: awd2cr.rs  awd3cr.rs  calfact.rs  cfgr.rs  cfgr2.rs  cr.rs  difsel.rs  dr.rs  gcomp.rs  ier.rs  isr.rs  jdr1.rs  jdr2.rs  jdr3.rs  jdr4.rs  jsqr.rs  ofr1.rs  ofr2.rs  ofr3.rs  ofr4.rs  regs.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  sqr4.rs  tr1.rs  tr2.rs  tr3.rs
pac/src/stm32g431/adc12_common/: ccr.rs  cdr.rs  csr.rs  regs.rs
pac/src/stm32g431/aes/: cr.rs  dinr.rs  doutr.rs  ivr0.rs  ivr1.rs  ivr2.rs  ivr3.rs  keyr0.rs  keyr1.rs  keyr2.rs  keyr3.rs  keyr4.rs  keyr5.rs  keyr6.rs  keyr7.rs  regs.rs  sr.rs  susp0r.rs  susp1r.rs  susp2r.rs  susp3r.rs  susp4r.rs  susp5r.rs  susp6r.rs  susp7r.rs
pac/src/stm32g431/comp/: comp_c1csr.rs  comp_c2csr.rs  comp_c3csr.rs  comp_c4csr.rs  regs.rs
pac/src/stm32g431/cordic/: csr.rs  rdata.rs  regs.rs  wdata.rs
pac/src/stm32g431/crc/: cr.rs  dr.rs  idr.rs  init.rs  pol.rs  regs.rs
pac/src/stm32g431/crs/: cfgr.rs  cr.rs  icr.rs  isr.rs  regs.rs
pac/src/stm32g431/dac1/: dac_ccr.rs  dac_cr.rs  dac_dhr12l1.rs  dac_dhr12l2.rs  dac_dhr12ld.rs  dac_dhr12r1.rs  dac_dhr12r2.rs  dac_dhr12rd.rs  dac_dhr8r1.rs  dac_dhr8r2.rs  dac_dhr8rd.rs  dac_dor1.rs  dac_dor2.rs  dac_mcr.rs  dac_shhr.rs  dac_shrr.rs  dac_shsr1.rs  dac_shsr2.rs  dac_sr.rs  dac_stmodr.rs  dac_str1.rs  dac_str2.rs  dac_swtrgr.rs  regs.rs
pac/src/stm32g431/dbgmcu/: apb1h_fz.rs  apb1l_fz.rs  apb2_fz.rs  cr.rs  idcode.rs  regs.rs
pac/src/stm32g431/dma1/: ccr1.rs  ccr2.rs  ccr3.rs  ccr4.rs  ccr5.rs  ccr6.rs  ccr7.rs  ccr8.rs  cmar1.rs  cmar2.rs  cmar3.rs  cmar4.rs  cmar5.rs  cmar6.rs  cmar7.rs  cmar8.rs  cndtr1.rs  cndtr2.rs  cndtr3.rs  cndtr4.rs  cndtr5.rs  cndtr6.rs  cndtr7.rs  cndtr8.rs  cpar1.rs  cpar2.rs  cpar3.rs  cpar4.rs  cpar5.rs  cpar6.rs  cpar7.rs  cpar8.rs  ifcr.rs  isr.rs  regs.rs
pac/src/stm32g431/dmamux/: c0cr.rs  c10cr.rs  c11cr.rs  c12cr.rs  c13cr.rs  c14cr.rs  c15cr.rs  c1cr.rs  c2cr.rs  c3cr.rs  c4cr.rs  c5cr.rs  c6cr.rs  c7cr.rs  c8cr.rs  c9cr.rs  cfr.rs  csr.rs  regs.rs  rg0cr.rs  rg1cr.rs  rg2cr.rs  rg3cr.rs  rgcfr.rs  rgsr.rs
pac/src/stm32g431/exti/: emr1.rs  emr2.rs  ftsr1.rs  ftsr2.rs  imr1.rs  imr2.rs  pr1.rs  pr2.rs  regs.rs  rtsr1.rs  rtsr2.rs  swier1.rs  swier2.rs
pac/src/stm32g431/fdcan/: fdcan_ckdiv.rs  fdcan_crel.rs  fdcan_ecr.rs  fdcan_hpms.rs  fdcan_ie.rs  fdcan_ils.rs  fdcan_nbtp.rs  fdcan_psr.rs  fdcan_rwd.rs  fdcan_rxf1s.rs  fdcan_rxgfc.rs  fdcan_test.rs  fdcan_tocc.rs  fdcan_tocv.rs  fdcan_tscc.rs  fdcan_tscv.rs  fdcan_txbar.rs  fdcan_txbc.rs  fdcan_txbcie.rs  fdcan_txbrp.rs  fdcan_txbto.rs  fdcan_txefa.rs  fdcan_txefs.rs
pac/src/stm32g431/fdcan1/: fdcan_cccr.rs  fdcan_ckdiv.rs  fdcan_dbtp.rs  fdcan_ecr.rs  fdcan_endn.rs  fdcan_hpms.rs  fdcan_ie.rs  fdcan_ile.rs  fdcan_ils.rs  fdcan_ir.rs  fdcan_nbtp.rs  fdcan_psr.rs  fdcan_rwd.rs  fdcan_rxf0a.rs  fdcan_rxf0s.rs  fdcan_rxf1a.rs  fdcan_rxf1s.rs  fdcan_rxgfc.rs  fdcan_tdcr.rs  fdcan_test.rs  fdcan_tocc.rs  fdcan_tocv.rs  fdcan_tscc.rs  fdcan_tscv.rs  fdcan_txbar.rs  fdcan_txbc.rs  fdcan_txbcf.rs  fdcan_txbcie.rs  fdcan_txbcr.rs  fdcan_txbrp.rs  fdcan_txbtie.rs  fdcan_txbto.rs  fdcan_txefa.rs  fdcan_txefs.rs  fdcan_txfqs.rs  fdcan_xidam.rs  regs.rs  vals.rs
pac/src/stm32g441/: aes.rs  device.x  dma1.rs  exti.rs  gpioc.rs  mod.rs
pac/src/stm32g471/: comp.rs  crs.rs  device.x  iwdg.rs  mod.rs  opamp.rs
pac/src/stm32g473/: device.x  fdcan1.rs  mod.rs  quadspi.rs  rcc.rs  syscfg.rs  tim6.rs
pac/src/stm32g474/: adc12_common.rs  comp.rs  device.x  generic.rs  hrtim_master.rs  hrtim_tima.rs  hrtim_timb.rs  hrtim_timd.rs  hrtim_time.rs  hrtim_timf.rs  mod.rs  sai.rs  usb_fs_device.rs
pac/src/stm32g483/: dac1.rs  fmc.rs  mod.rs  pwr.rs  spi4.rs  vrefbuf.rs
pac/src/stm32g484/: device.x  fdcan.rs  flash.rs  hrtim_common.rs  hrtim_timc.rs  mod.rs  opamp.rs  rtc.rs  tamp.rs  tim1.rs  tim15.rs
pac/src/stm32g491/: adc3.rs  cordic.rs  crc.rs  device.x  dmamux.rs  i2c1.rs  mod.rs  rng.rs  ucpd1.rs  wwdg.rs
pac/svds/: STM32G431.svd
pac/xtask/: Cargo.toml
pac/xtask/src/: lib.rs  main.rs
(+1210 files in other folders)
