[package]
name = "stm32g4-hal"
version = "0.0.1"
authors = ["danc <dangcheng@hotmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32G4 series microcontrollers"
keywords = ["arm", "cortex-m", "stm32g4", "stm32g4xx", "hal"]
documentation = "https://docs.rs/stm32g4-hal"
repository = "https://github.com/danclive/stm32g4-hal"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
critical-section = "1.1"
defmt = { version = "0.3.8", optional = true }
stm32g4-pac = { version = "0.0.1", path = "../pac" }
fugit = "0.3.7"
enumflags2 = "0.7.10"
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }
rtic-time = { version = "2.0", optional = true }
portable-atomic = { version = "1", optional = true }
cfg-if = "1.0"
paste = "1.0"
fdcan = { version = "0.2", features = ["fdcan_g0_g4_l5"] }
chrono = { version = "0.4", default-features = false }
cast = "0.3.0"

[dev-dependencies]
defmt-rtt = "0.4.1"
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }

[features]
default = ["stm32g431", "defmt", "rtic-tim2", "rtic-systick"]
defmt = [
    "dep:defmt",
    "stm32g4-pac/defmt",
    "fugit/defmt",
    "embedded-hal/defmt-03",
]
rtic = ["rtic-time", "portable-atomic", "embedded-hal-async"]
rtic-systick = ["rtic"]
rtic-systick-64bit = ["rtic-systick"]

rtic-tim2 = ["rtic"]
rtic-tim5 = ["rtic"]

stm32g431 = ["stm32g4-pac/stm32g431", "gpio-g431"]
stm32g441 = ["stm32g4-pac/stm32g441", "gpio-g441"]
stm32g471 = ["stm32g4-pac/stm32g471", "gpio-g471"]
stm32g473 = ["stm32g4-pac/stm32g473", "gpio-g473"]
stm32g474 = ["stm32g4-pac/stm32g474", "gpio-g474"]
stm32g483 = ["stm32g4-pac/stm32g483", "gpio-g483"]
stm32g484 = ["stm32g4-pac/stm32g484", "gpio-g484"]
stm32g491 = ["stm32g4-pac/stm32g491", "gpio-g491"]

gpio-g431 = [
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim6",
    "tim7",
    "tim8",
    "tim15",
    "tim16",
    "tim17",
]

gpio-g441 = [
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim6",
    "tim7",
    "tim8",
    "tim15",
    "tim16",
    "tim17",
]

gpio-g471 = [
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim15",
    "tim16",
    "tim17",
    "i2c4",
    "can2",
]

gpio-g473 = [
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim15",
    "tim16",
    "tim17",
    "tim20",
    "i2c4",
    "can2",
    "can3",
]

gpio-g474 = [
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim15",
    "tim16",
    "tim17",
    "tim20",
    "i2c4",
    "can2",
    "can3",
]

gpio-g483 = [
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim15",
    "tim16",
    "tim17",
    "tim20",
    "i2c4",
    "can2",
    "can3",
]

gpio-g484 = [
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim15",
    "tim16",
    "tim17",
    "tim20",
    "i2c4",
    "can2",
    "can3",
]

gpio-g491 = [
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim15",
    "tim16",
    "tim17",
    "tim20",
    "can2",
    "can3",
]

gpiod = []
gpioe = []
gpiof = []
gpiog = []
gpioh = []
gpioi = []
gpioj = []
gpiok = []

tim1 = []
tim2 = []
tim3 = []
tim4 = []
tim5 = []
tim6 = []
tim7 = []
tim8 = []

tim15 = []
tim16 = []
tim17 = []
tim20 = []

i2c4 = []

spi4 = []

uart5 = []

adc345 = []

can2 = []
can3 = []

[package.metadata.docs.rs]
features = ["stm32g431"]
# default-target = "thumbv7em-none-eabihf"
targets = ["thumbv7em-none-eabihf"]

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = 3

[[example]]
name = "rtic_systick"
required-features = ["defmt", "rtic-systick"]

[[example]]
name = "rtic_tick"
required-features = ["defmt", "rtic-tim2"]
