[package]
name = "stm32g4-pac"
version = "0.0.4"
authors = ["danc <dangcheng@hotmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32G4 series microcontrollers"
keywords = ["arm", "cortex-m", "stm32g4", "stm32g4xx", "hal"]
documentation = "https://docs.rs/stm32g4-pac"
repository = "https://github.com/danclive/stm32g4-pac"
edition = "2024"
license = "MIT/Apache-2.0"
readme = "README.md"

[workspace]
members = ["xtask"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
critical-section = { version = "1.2", optional = true }
portable-atomic = { version = "1.11", default-features = false, optional = true }
defmt = { version = "1.0.1", optional = true }
vcell = "0.1.3"
cfg-if = "1.0"

# meta-dependencies (upgrade as needed, they apply to all PACs):
# @svdtools = 0.5.0
# @svd2rust = 0.36.1
# @form = 0.13.0

[features]
default = ["rt", "critical-section", "atomics", "stm32g431"]
rt = ["cortex-m-rt/device"]
critical-section = ["dep:critical-section", "cortex-m/critical-section-single-core"]
atomics = ["dep:portable-atomic"]
defmt = ["dep:defmt"]

stm32g431 = []
stm32g441 = []
stm32g471 = []
stm32g473 = []
stm32g474 = []
stm32g483 = []
stm32g484 = []
stm32g491 = []

[package.metadata.docs.rs]
features = ["rt", "critical-section", "stm32g431", "stm32g441"]
# default-target = "thumbv7em-none-eabihf"
targets = ["thumbv7em-none-eabihf"]
